--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -28,7 +28,7 @@
         android:layout_marginTop="80dp"
         android:layout_marginEnd="772dp"
         android:layout_marginBottom="640dp"
-        android:text="메뉴 소개"
+        android:text="ㅎㅎ"
         android:textSize="60sp"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
